added full documentation for competitions
